--- a/Probability and Stochastics/Probability and Stochastics.tex
+++ b/Probability and Stochastics/Probability and Stochastics.tex
@@ -45,6 +45,7 @@
 \DeclareMathOperator\Id{Id}
 \DeclareMathOperator\rk{rank}
 \DeclareMathOperator\var{var}
+\DeclareMathOperator\cov{cov}
 \DeclareMathOperator\card{card}
 \DeclareMathOperator\coker{coker}
 \DeclareMathOperator\vol{vol}
@@ -100,755 +101,11 @@
 
 \include{chapters/ch4/L^p space}
 
-
-
-\chapter{积测度}
-
-\section{积 $\sigma$-域}
-
-令 $(E,\mathcal{A})$ 和 $(F,\mathcal{B})$ 是两个可测空间。
-回顾第一章，我们定义 $E\times F$ 上的乘积 $\sigma$-域
-\[
-  \mathcal{A}\otimes \mathcal{B}=\sigma(A\times B\,|\, A\in \mathcal{A},B\in \mathcal{B}).  
-\]
-不难验证 $\mathcal{A}\otimes \mathcal{B}$ 是使得两个投影映射
-$\pi_1:E\times F\to E$ 和 $\pi_2:E\times F\to F$ 都可测的最小的
-$\sigma$-域。
-
-如果 $C\subseteq E\times F$，$x\in E$，记
-\[
-  C_x=\{y\in F\,|\, (x,y)\in C\}\subseteq F,  
-\]
-如果 $y\in F$，记
-\[
-  C^y=\{x\in E\,|\, (x,y)\in C\}  \subseteq E.
-\]
-如果 $f$ 是 $E\times F$ 上的函数，$x\in E$，我们记 $f_x$ 表示
-$F$ 上的函数 $f_x(y)=f(x,y)$。类似地，如果 $y\in F$，我们记
-$f^y(x)=f(x,y)$ 表示 $E$ 上的函数。
-
-\begin{proposition}
-  \mbox{}
-  \begin{enumerate}
-    \item 令 $C\in \mathcal{A}\otimes \mathcal{B}$，那么
-    对于任意 $x\in E$，$C_x\in \mathcal{B}$，
-    对于任意 $y\in F$，$C^y\in \mathcal{A}$。
-    \item 令 $(G,\mathcal{G})$ 是可测空间，$f:E\times F\to G$
-    是可测函数，那么对于任意 $x\in E$，$f_x:F\to G$ 是可测的，
-    对于任意 $y\in F$，$f^y:E\to G$ 是可测的。
-  \end{enumerate}
-\end{proposition}
-\begin{proof}
-  (1) 对于 $x\in E$，令
-  \[
-    \mathcal{C}  =\{C\in \mathcal{A}\otimes \mathcal{B}\,|\, C_x\in \mathcal{B}\},
-  \]
-  那么不难验证 $\mathcal{C}$ 是一个 $\sigma$-域且包含所有的可测矩形，
-  于是 $\mathcal{C}=\mathcal{A}\otimes \mathcal{B}$，
-  即表明对于任意 $C\in \mathcal{A}\otimes \mathcal{B}$ 都有 $C_x\in \mathcal{B}$。
-  $C^y\in \mathcal{A}$ 同理。
-
-  (2) 对于 $x\in E$，任取 $D\in \mathcal{G}$，有
-  \[
-    f_x^{-1}(D)=\bigl(f^{-1}(D)\bigr)_x \in \mathcal{B}.\qedhere
-  \]
-\end{proof}
-
-
-\section{积测度}
-
-\begin{theorem}\label{thm:product measure}
-  令 $\mu$ 和 $\nu$ 分别是 $(E,\mathcal{A})$ 和 $(F,\mathcal{B})$
-  上的 $\sigma$-有限测度，那么
-  \begin{enumerate}
-    \item 存在唯一的 $(E\times F,\mathcal{A}\otimes \mathcal{B})$
-    上的测度 $m$，使得对于每个 $A\in \mathcal{A},B\in \mathcal{B}$，都有
-    \[
-      m(A\times B)=\mu(A)\nu(B),  
-    \]
-    约定 $0\times \infty=0$。测度 $m$ 也是 $\sigma$-有限的，
-    记为 $m=\mu\otimes\nu$。
-    \item 对于每个 $C\in \mathcal{A}\otimes \mathcal{B}$，函数
-    $x\mapsto \nu(C_x)$ 是 $\mathcal{A}$-可测的，
-    $y\mapsto \mu(C^y)$ 是 $\mathcal{B}$-可测的，并且我们有
-    \[
-      \mu\otimes \nu(C)=\int_E \nu(C_x)\mu(\d x)=\int_F\mu(C^y)\nu(\d y).  
-    \]
-  \end{enumerate}
-\end{theorem}
-\begin{proof}
-  我们首先说明这样的测度 $m$ 一定是唯一的。我们使用 \autoref{coro:uniqueness of measure}
-  说明唯一性。若测度 $m'$ 也满足性质 (1)。首先所有可测矩形对有限交封闭且生成 $\mathcal{A}\otimes \mathcal{B}$，
-  并且 $m$ 和 $m'$ 在可测矩形上取值相同。$\mu$ 是 $\sigma$-有限的表明存在
-  递增的可测子集 $(A_n)_{n\in \mathbb{N}}$ 使得 $\bigcup_{n\in \mathbb{N}}A_n=E$
-  并且 $\mu(A_n)$ 有限。同理存在递增的可测子集 $(B_n)_{n\in \mathbb{N}}$ 
-  使得 $\bigcup_{n\in \mathbb{N}}B_n=F$ 并且 $\nu(B_n)$ 有限。
-  令 $G_n=A_n\times B_n$，那么 $G_n\subseteq G_{n+1}$ 并且
-  $E\times F=\bigcup_{n\in \mathbb{N}}G_n$，此时
-  \[
-    m'(G_n)=\mu(A_n)\nu(B_n)=m(G_n)<\infty,  
-  \] 
-  所以 \autoref{coro:uniqueness of measure} 表明 $m=m'$。
-
-  然后我们说明存在性。对于 $C\in \mathcal{A}\otimes \mathcal{B}$，定义
-  \begin{equation}\label{eq:def of product measure}
-    m(C) =\int_E\nu(C_x)\mu(\d x).
-  \end{equation}
-  对于任意 $x\in E$，有 $C_x\in \mathcal{B}$，所以 $\nu(C_x)$
-  是良好定义的。下面我们证明 $x\mapsto \nu(C_x)$ 是可测函数。
-  \begin{enumerate}[label=(\arabic*)]
-    \item 首先假设 $\nu$ 是有限测度。
-    令 $\mathcal{G}=\{C\in \mathcal{A}\otimes \mathcal{B}\,|\, \text{$x\mapsto \nu(C_x)$ 可测}\}$。
-    那么对于可测矩形 $A\times B\in \mathcal{A}\otimes \mathcal{B}$，有
-    $\nu((A\times B)_x)=\indicator{A}(x)\nu(B)$，此时 $x\mapsto \indicator{A}(x)\nu(B)$
-    当然是可测函数。故 $\mathcal{G}$ 包含所有的可测矩形。
-    其次，我们证明 $\mathcal{G}$ 是一个单调类。如果 $C,C'\in \mathcal{G}$
-    且 $C\subseteq  C'$，那么利用 $\nu$ 的有限性，就有
-    \[
-      \nu\bigl((C'\smallsetminus C)_x\bigr)  
-      =\nu(C'_x \smallsetminus C_x)=\nu(C_x')-\nu(C_x),
-    \]
-    所以 $x\mapsto \nu\bigl((C'\smallsetminus C)_x\bigr)$ 是可测函数，
-    即 $C' \smallsetminus C\in \mathcal{G}$。如果 $(C_n)_{n\in \mathbb{N}}$
-    是 $\mathcal{G}$ 中的一个递增序列，那么
-    \[
-      \nu\biggl(\biggl(\bigcup_{n\in \mathbb{N}}C_n\biggr)_x\biggr)  
-      =\nu\biggl(\bigcup_{n\in \mathbb{N}}(C_n)_x\biggr)
-      =\ulim[n\to\infty]\nu((C_n)_x),
-    \] 
-    而 $x\mapsto \ulim \nu((C_n)_x)$ 是可测函数，所以 $\bigcup_{n\in \mathbb{N}}C_n\in \mathcal{G}$。
-    这就表明 $\mathcal{G}$ 是单调类。由于 $\mathcal{G}$ 包含可测矩形，可测矩形对有限交封闭，
-    根据单调类定理，所以 $\mathcal{G}$ 是 $\sigma$-域，所以 $\mathcal{G}=\mathcal{A}\otimes \mathcal{B}$，
-    这表明对于任意 $C\in \mathcal{A}\otimes \mathcal{B}$，$x\mapsto \nu(C_x)$ 都是可测函数。
-    \item 然后假设 $\nu$ 是 $\sigma$-有限测度。此时存在 $\mathcal{B}$ 的一列递增
-    子集 $(B_n)_{n\in \mathbb{N}}$ 使得 $F=\bigcup_{n\in \mathbb{N}}B_n$
-    以及 $\nu(B_n)<\infty$。令 $\nu_n$ 表示测度 $\nu$ 在 $B_n$ 上的限制，那么
-    根据上面的叙述，任取 $C\in \mathcal{A}\otimes \mathcal{B}$，函数 $x\mapsto \nu_n(C_x)$ 是可测函数。
-    注意到
-    \[
-      \nu(C_x)=\nu\biggl(\bigcup_{n\in \mathbb{N}}(C_x\cap B_n)\biggr)  
-      =\ulim[n\to\infty] \nu_n(C_x),
-    \]
-    所以 $x\mapsto \ulim \nu(C_x)$ 是可测函数。
-  \end{enumerate}
-
-  于是我们证明了 $x\mapsto \nu(C_x)$ 是可测函数，这表明定义 \eqref{eq:def of product measure}
-  式是有意义的。下面我们验证 $m$ 满足测度的条件。显然 $m(\emptyset)=0$。
-  任取 $(C_n)_{n\in \mathbb{N}}$ 是 $\mathcal{A}\otimes \mathcal{B}$
-  中的一列不相交的子集，那么
-  \begin{align*}
-    m\biggl(\bigcup_{n\in \mathbb{N}}C_n\biggr)&=\int_E
-    \nu\biggl(\bigcup_{n\in \mathbb{N}}(C_n)_x\biggr)\mu(\d x)
-    =\int_E\sum_{n\in \mathbb{N}}\nu((C_n)_x)\mu(\d x)\\
-    &=\sum_{n\in \mathbb{N}}\int_E\nu((C_n)_x)\mu(\d x)
-    =\sum_{n\in \mathbb{N}}m(C_n),
-  \end{align*}
-  其中第三个等号利用了单调收敛定理。这就表明 $m$ 确实是一个测度。
-
-  对于可测矩形 $A\times B\in \mathcal{A}\otimes \mathcal{B}$，有
-  \[
-    m(A\times B)=\int_E\nu((A\times B)_x)\mu(\d x)
-    =\int_E\nu(B)\indicator{A}(x)\mu(\d x)  
-    =\mu(A)\nu(B),
-  \]
-  所以这样的 $m$ 是唯一的。对于 $C\in \mathcal{A}\otimes \mathcal{B}$，定义
-  \begin{equation*}
-    m'(C) =\int_F\mu(C^y)\nu(\d y),
-  \end{equation*}
-  重复上面的过程，可以证明 $m'$ 满足和 $m$ 相同的性质，所以 $m=m'$。
-\end{proof}
-
-\section{Fubini 定理}
-
-考虑可测空间 $(E,\mathcal{A})$ 和 $(F,\mathcal{B})$。
-
-\begin{theorem}[Fubini-Tonelli]\label{thm:Fubini-Tonelli}
-  令 $\mu$ 和 $\nu$ 分别是 $(E,\mathcal{A})$ 和 $(F,\mathcal{B})$ 上的两个
-  $\sigma$-有限的测度。令 $f:E\times F\to [0,\infty]$ 是可测函数。
-  \begin{enumerate}
-    \item 函数
-    \[
-      E\ni x\mapsto \int_F f(x,y)\nu(\d y),\quad 
-      F\ni y\mapsto \int_E f(x,y)\mu(\d x)  
-    \]
-    是值在 $[0,\infty]$ 中的可测函数。
-    \item 我们有
-    \[
-      \int_{E\times F}f\d\mu\otimes\nu 
-      =\int_E\left(\int_F f(x,y)\nu(\d y)\right)\mu(\d x)=\int_F
-      \left(\int_E f(x,y)\mu(\d x)\right)\nu(\d y).
-    \]
-  \end{enumerate}
-\end{theorem}
-\begin{proof}
-  (1) 设 $f=\ulim f_n$，$(f_n)_{n\in \mathbb{N}}$ 是一列递增的非负简单函数，
-  那么根据单调收敛定理，有
-  \[
-    \int_F f(x,y)\nu(\d y)=\ulim[n\to\infty]\int_Ff_n(x,y)\nu(\d y)  ,
-  \]
-  所以我们只需要说明对于任意非负简单函数 $h$，$x\mapsto \int_F h(x,y)\nu(\d y)$
-  可测即可。对于示性函数 $\indicator{C}$，有
-  $\int_F \indicator{C}(x,y) \nu(\d y)=\nu(C_x)$，\autoref{thm:product measure}
-  表明 $x\mapsto \nu(C_x)$ 是可测的，再根据线性性，这就说明了
-  $x\mapsto \int_F h(x,y)\nu(\d y)$ 可测。
-  对于 $x\mapsto\int_E f(x,y)\mu(\d x)$ 同理。
-
-  (2) 设 $f=\ulim f_n$，$(f_n)_{n\in \mathbb{N}}$ 是一列递增的非负简单函数，
-  那么根据单调收敛定理，有
-  \[
-    \int_{E\times F} f\d\mu\otimes \nu
-    =\ulim[n\to\infty]\int_{E\times F}f_n(x,y)\nu(\d y),  
-  \]
-  所以只需要证明结论对于非负简单函数成立即可。根据线性性，只需要证明结论对
-  示性函数成立即可。任取示性函数 $\indicator{C}$，根据 \autoref{thm:product measure}，有
-  \[
-    \int_{E\times F} \indicator{C}\d\mu\otimes\nu=
-    \mu\otimes \nu(C)=\int_E\nu(C_x)\mu(\d x)  
-    =\int_E\left(\int_F \indicator{C}(x,y)\nu(\d y)\right)\mu(\d x),
-  \]
-  另一个等式同理。
-\end{proof}
-
-\autoref{thm:Fubini-Tonelli} 也可以推广到任意符号的版本。
-
-\begin{theorem}[Fubini-Lebesgue]
-  令 $f\in \mathcal{L}^1(E\times F,\mathcal{A}\otimes \mathcal{B},\mu\otimes\nu)$，那么
-  \begin{enumerate}
-    \item $\alev{\mu(\d x)}$，函数 $y\mapsto f(x,y)$ 属于 $\mathcal{L}^1(F,\mathcal{B},\nu)$。
-    $\alev{\nu(\d y)}$，函数 $x\mapsto f(x,y)$ 属于 $\mathcal{L}^1(E,\mathcal{A},\mu)$。
-    \item 函数 $x\mapsto \int_F f(x,y)\nu(\d y)$ 属于 $\mathcal{L}^1(E,\mathcal{A},\mu)$。
-    函数 $y\mapsto \int_E f(x,y)\mu(\d x)$ 属于 $\mathcal{L}^1(F,\mathcal{B},\nu)$。
-    \item 我们有
-    \[
-      \int_{E\times F}f\d\mu\otimes\nu 
-      =\int_E\left(\int_F f(x,y)\nu(\d y)\right)\mu(\d x)=\int_F
-      \left(\int_E f(x,y)\mu(\d x)\right)\nu(\d y).
-    \]
-  \end{enumerate}
-\end{theorem}
-
-
-
-
+\include{chapters/ch5/product measure}
 
 \part{概率论}
 
-\chapter{概率论基础}
-
-\section{一般定义}
-
-\subsection{概率空间}
-
-令 $(\Omega,\mathcal{A})$ 是可测空间，$\mathbb{P}$ 是 $(\Omega,\mathcal{A})$
-上的概率测度，我们说 $(\Omega,\mathcal{A},\mathbb{P})$ 是\emph{概率空间}。
-
-因此，概率空间是测度空间的一个特例。然而，概率论的观点与测度论有很大不同。在概率论中，
-我们的目标是一个“随机实验”的数学模型：
-\begin{itemize}[nosep]
-  \item $\Omega$ 表示实验的所有可能的结果的集合。
-  \item $\mathcal{A}$ 是所有“事件”的集合。这里的事件指的是 $\Omega$ 的一个子集，其概率
-  可以被计算(也就是可测集)。我们应当把事件 $A$ 视为满足某一属性的所有 $\omega\in\Omega$ 
-  构成的子集。
-  \item 对于每个 $A\in \mathcal{A}$，$\mathbb{P}(A)$ 表示事件 $A$ 发生的概率。
-\end{itemize}
-
-当然，一个自然的疑问是，为什么需要考虑事件域 $\mathcal{A}$？换句话说，为什么不能对
-$\Omega$ 的任意子集都计算一个概率？原因在于，一般不可能在 $\Omega$ 的幂集 $\mathcal{P}(\Omega)$
-上定义我们感兴趣的概率测度(除开 $\Omega$ 是可数集这一简单情况)。例如，取 $\Omega=[0,1]$，
-配备 Borel $\sigma$-域和 Lebesgue 测度，但是，可以证明不可能将 Lebesgue 测度扩展到
-$[0,1]$ 的任意子集上使得其仍然满足测度的定义。
-
-\begin{example}\label{exa:dice model}
-  一些常见的概率模型。
-  \begin{enumerate}
-    \item 考虑扔两次骰子这一实验，那么
-    \[
-      \Omega=\{1,2,\dots,6\}^2,\quad \mathcal{A}=\mathcal{P}(\Omega),\quad
-      \mathbb{P}(A)=\frac{\card(A)}{36}.
-    \]
-    这里概率 $\mathbb{P}$ 的选取意味着让所有结果都有相同的概率。更一般地，如果 $\Omega$
-    是有限集，$\mathcal{A}=\mathcal{P}(\Omega)$，概率测度 $\mathbb{P}(\{\omega\})=1/\card(\Omega)$
-    被称为 $\Omega$ 上的\emph{均匀概率测度}。
-    \item 现在我们考虑实验：扔骰子，直到出现 $6$ 为止。由于得到 $6$ 所需的投掷次数是无界的
-    (即使你扔了 $1000$ 次骰子，仍有可能没有得到 $6$)，所以 $\Omega$ 的正确选择是想象
-    我们扔了无限次骰子：
-    \[
-      \Omega=\{1,2,\dots,6\}^{\mathbb{N}}.
-    \]
-    $\Omega$ 上的 $\sigma$-域 $\mathcal{A}$ 被定义为包含形如
-    \[
-      \{\omega\in\Omega\,|\, \omega_1=i_1,\dots,\omega_n=i_n\}
-    \]
-  \end{enumerate}
-\end{example}
-
-与测度论类似，零测集也会出现在概率论的很多叙述中，如果某个
-命题对于某个概率为 $1$ 的事件中的每个 $\omega\in\Omega$ 都成立，那么
-我们说这个命题\emph{几乎肯定}成立，用缩写 a.s. 表示。
-
-
-\subsection{随机变量}
-
-在本章的剩余部分，我们都考虑一个概率空间 $(\Omega,\mathcal{A},\mathbb{P})$，并且所有
-随机变量都将在这个概率空间上定义。
-
-\begin{definition}
-  令 $(E,\mathcal{E})$ 是可测空间，值在 $E$ 中的\emph{随机变量}指的是一个可测映射
-  $X:\Omega\to E$。
-\end{definition}
-
-\begin{example}
-  回顾 \eqref{exa:dice model} 中的模型。
-  \begin{enumerate}
-    \item $X((i,j))=i+j$ 定义了值在 $\{2,3,\dots,12\}$ 中的随机变量。
-    \item $X(\omega)=\inf\{j\,|\, \omega_j=6\}$，约定 $\inf \emptyset=\infty$，
-    定义了值在 $\bar{\mathbb{N}}=\mathbb{N}\cup\{\infty\}$ 中的随机变量。为了验证
-    $X$ 的可测性，只需要注意到
-    \[
-      X^{-1}(\{k\})=\{\omega\in\Omega\,|\, \omega_1\neq 6,\dots,\omega_{k-1}\neq 6,\omega_k=6\}.
-    \]
-  \end{enumerate}
-\end{example}
-
-\begin{definition}
-  令 $X$ 是值在 $(E,\mathcal{E})$ 中的随机变量，定义随机变量 $X$ 的
-  \emph{分布律} $\mathbb{P}_X$ 是概率测度 $\mathbb{P}$ 在 $X$ 下的推前。
-  也就是说，$\mathbb{P}_X$ 是 $(E,\mathcal{E})$ 上的概率测度，满足
-  \[
-    \mathbb{P}_X(B)=\mathbb{P}(X^{-1}(B)),\quad \forall B\in \mathcal{E}.
-  \]
-  两个值在 $(E,\mathcal{E})$ 中的随机变量 $Y,Y'$ 如果有相同的分布
-  $\mathbb{P}_Y=\mathbb{P}_{Y'}$，那么我们说 $Y$ 和 $Y'$ 是\emph{同分布}的。
-\end{definition}
-
-在概率论中，我们通常将 $\mathbb{P}_X(B)$ 写为 $\mathbb{P}(X\in B)$
-而不是 $\mathbb{P}(X^{-1}(B))$。这里 $X\in B$ 是集合
-$\{\omega\in\Omega\,|\, X(\omega)\in B\}$ 的简写，这是一个一般性
-的简写规则，在概率论中参数 $\omega$ 通常被隐藏。
-
-\paragraph{离散型随机变量}
-当 $E$ 是有限或者可数($\mathcal{E}=\mathcal{P}(E)$)的时候，
-$X$ 的分布是点测度，这是因为
-\[
-  \mathbb{P}_X(B)=\mathbb{P}(X\in B)=\mathbb{P}\biggl(\bigcup_{x\in B}\{X=x\}\biggr)
-  =\sum_{x\in B}\mathbb{P}(X=x)=\sum_{x\in E}p_x\delta_x(B),
-\]
-其中 $p_x=\mathbb{P}(X=x)$。这就表明
-\[
-  \mathbb{P}_X=\sum_{x\in E}p_x\delta_x 
-\]
-是 $E$ 上的点测度。
-
-\begin{example}
-  我们考虑 \eqref{exa:dice model} 中的第二个例子，随机变量
-  为 $X(\omega)=\inf\{j\,|\,\omega_j=6\}$。那么
-  \begin{align*}
-    \mathbb{P}(X=k)&=\mathbb{P}
-    \biggl(\bigcup_{1\leq i_1,\dots,i_k\leq 5}\{\omega\,|\, 
-    \omega_1=i_1,\dots,\omega_{k-1}=i_{k-1},\omega_k=6\}\biggr)\\
-    &=5^{k-1}\left(\frac{1}{6}\right)^k=\frac{1}{6}\left(\frac{5}{6}\right)^{k-1}.
-  \end{align*}
-  注意到
-  \[
-    \sum_{k=1}^\infty \mathbb{P}(X=k)=\frac{1}{6}\frac{1}{1-\frac{5}{6}}=1
-  \]
-  并且 $\{X=\infty\}\cup\bigcup_{k=1}^\infty \{X=k\}=\Omega$，所以
-  \[
-    \mathbb{P}(X=\infty)=1-\sum_{k=1}^\infty \mathbb{P}(X=k)=0,
-  \]  
-  但是 $\{X=\infty\}\neq\emptyset$。
-\end{example}
-
-\paragraph{具有密度的随机变量} $\mathbb{R}^d$ 上的密度函数是一个非负的 Borel 函数
-$p:\mathbb{R}^d\to \mathbb{R}_+$，其满足 
-\[
-  \int_{\mathbb{R}^d} p(x)\d x=1.
-\]
-对于一个值在 $\mathbb{R}^d$ 中的随机变量 $X$，如果存在密度 $p$ 使得
-\[
-  \mathbb{P}_X(B)=\int_B p(x)\d x
-\]
-对于任意 Borel 子集 $B$ 都成立，那么我们说 $X$ 有密度函数 $p$。
-换句话说，$p$ 是 $\mathbb{P}_X$ 相对于 Lebesgue 测度 $\lambda$ 的密度
-(\autoref{coro:density of measure})，
-也记为 $\mathbb{P}_X(\d x)=p(x)\lambda(\d x)=p(x)\d x$。
-
-注意到密度 $p$ 实际上是在相差一个 Lebesgue 零测集的意义下由 $\mathbb{P}_X$ 确定的。
-在我们遇到的大多数例子中，$p$ 在 $\mathbb{R}^d$ 上连续，在这种情况下，$p$ 由
-$\mathbb{P}_X$ 唯一确定。
-
-在 $d=1$ 的时候，我们有
-\[
-  \mathbb{P}(\alpha\leq X\leq \beta)=\int_{\alpha}^\beta p(x)\d x.
-\]
-
-\subsection{数学期望}
-
-\begin{definition}
-  令 $X$ 是定义在 $(\Omega,\mathcal{A},\mathbb{P})$ 上的实随机变量，我们定义
-  \[
-    \mathbb{E}[X]=\int_\Omega X(\omega)\mathbb{P}(\d\omega)=\int X\d \mathbb{P},
-  \]
-  只要上述积分有意义，我们就说 $\mathbb{E}[X]$ 是 $X$ 的\emph{期望}。
-\end{definition}
-
-根据前面的内容，上述积分有意义的条件为下列二者之一：
-\begin{itemize}[nosep]
-  \item $X\geq 0$，此时 $\mathbb{E}[X]\in [0,\infty]$。
-  \item $X$ 符号任意，但是 $\mathbb{E}[|X|]=\int|X| \d \mathbb{P}<\infty$。
-\end{itemize}
-
-
-上面的定义可以拓展到多元随机变量 $X=(X_1,\dots,X_d)\in \mathbb{R}^d$，
-此时我们定义 $\mathbb{E}[X]=\bigl(\mathbb{E}[X_1],\dots,\mathbb{E}[X_d]\bigr)$。
-类似的，如果 $M$ 是随机矩阵(值在实矩阵空间中的随机变量)，我们可以定义
-矩阵 $\mathbb{E}[M]$ 为对 $M$ 的每个分量求期望构成的矩阵。
-
-注意到若 $X=\mathbold 1_B$，那么
-\[
-  \mathbb{E}[X]=\int\mathbold 1_B \d \mathbb{P}=\mathbb{P}(B).
-\]
-
-对于一些特殊的随机变量，下面的命题被频繁地使用。
-
-\begin{proposition}
-  令 $X$ 是值在 $[0,\infty]$ 中的随机变量，那么
-  \[
-    \mathbb{E}[X]=\int_0^\infty \mathbb{P}(X\geq x) \d x.
-  \]
-  令 $Y$ 是值在 $\mathbb{Z}_+$ 中的随机变量，那么
-  \[
-    \mathbb{E}[Y]=\sum_{k=0}^\infty k \mathbb{P}(X=k)=\sum_{k=1}^\infty \mathbb{P}(Y\geq k).
-  \]
-\end{proposition}
-\begin{proof}
-  根据 Fubini 定理，我们有
-  \[
-    \mathbb{E}[X]=\mathbb{E}\left[
-      \int_0^\infty \mathbold 1_{\{x\leq X\}}\d x
-    \right]=\int_0^\infty \mathbb{E}[\mathbold 1_{\{x\leq X\}}] \d x
-    =\int_0^\infty \mathbb{P}(X\geq x) \d x.
-  \]
-  对于随机变量 $Y$，我们有
-  \[
-    \mathbb{E}[Y]=\mathbb{E}\left[
-      \sum_{k=0}^\infty k\mathbold 1_{\{Y=k\}}
-    \right]=\int \biggl(\sum_{k=0}^\infty k\mathbold 1_{\{Y=k\}}\biggr)\d \mathbb{P}
-    =\sum_{k=0}^\infty k \mathbb{P}(Y=k).
-  \]
-  对于第二个等式，只需注意到
-  \[
-    Y=\sum_{k=1}^\infty \mathbold 1_{\{Y\geq k\}}.\qedhere
-  \]
-\end{proof}
-
-下面的命题是 \autoref{prop:change variable} 的特例，由于其结果十分重要，所以我们再次叙述一遍。
-
-\begin{proposition}\label{prop:use law to calculate exception}
-  令 $X$ 是值在 $(E,\mathcal{E})$ 中的随机变量，对于任意可测函数 $f:E\to [0,\infty]$，
-  我们有
-  \[
-    \mathbb{E}[f(X)]=\int_\Omega f(X(\omega)) \mathbb{P}(\d\omega)=\int_E f(x) \mathbb{P}_X(\d x).
-  \]
-\end{proposition}
-
-如果可测函数 $f:E\to \mathbb{R}$，上面的命题在两端有意义的情况下也是成立的，
-即 $\mathbb{E}[|f(X)|]<\infty$ 的时候。特别地，如果 $X$ 是实值随机变量
-且使得 $\mathbb{E}[|X|]<\infty$，那么有
-\[
-  \mathbb{E}[X]  =\int_{\Omega} X(\omega)\mathbb{P}(\d\omega)
-  =\int_{\mathbb{R}} x \mathbb{P}_X(\d x).
-\]
-
-\autoref{prop:use law to calculate exception} 告诉我们可以使用
-分布 $\mathbb{P}_X$ 来计算 $f(X)$ 的期望。实际上这个过程可以倒过来，
-如果我们能找到 $E$ 上的测度 $\nu$ 使得
-\[
-  \mathbb{E}[f(X)]=\int f\d\nu,  
-\]
-其中 $f:E\to \mathbb{R}$ 是任意示性函数，此时对于任意
-$E$ 的可测子集 $A$，有
-\[
-  \mathbb{P}_X(A)=\int \indicator{A} \d \mathbb{P}_X=\mathbb{E}[\indicator{A}(X)]=  \int \indicator{A}\d\nu=\nu(A),
-\]
-所以分布 $\mathbb{P}_X=\nu$。下面的命题应用了这样的思想。
-
-\begin{proposition}\label{prop:margin pdf}
-  令 $X=(X_1,\dots,X_d)$ 是值在 $\mathbb{R}^d$ 中的随机变量，假设
-  $X$ 有密度 $p(x_1,\dots,x_d)$。那么，对于任意 $1\leq j\leq d$，
-  $X_j$ 的密度为
-  \[
-    p_j(x)=\int_{\mathbb{R}^{d-1}}p(x_1,\dots,x_{j-1},x,x_{j+1},\dots,x_d)
-    \d x_1\cdots \d x_{j-1}\d x_{j+1}\cdots \d x_d.  
-  \]
-\end{proposition}
-\begin{proof}
-  记 $\pi_j$ 是投影函数 $\pi_j(x_1,\dots,x_d)=x_j$。对于任意的
-  Borel 函数 $f:\mathbb{R}\to \mathbb{R}_+$，根据 Fubini 定理，有
-  \begin{align*}
-    \mathbb{E}[f(X_j)]&=\mathbb{E}[f\circ\pi_j(X)]\\
-    &=\int_{\mathbb{R}^d}f(\pi_j(x)) \mathbb{P}_X(\d x)\\
-    &=\int_{\mathbb{R}^d}f(x_j)p(x_1,\dots,x_d) \d x_1\cdots\d x_d \\
-    &=\int_{\mathbb{R}}f(x_j)\left(
-      \int_{\mathbb{R}^{d-1}}p(x_1,\dots,x_d)\d x_1\cdots
-      \d x_{j-1}\d x_{j+1}\cdots \d x_d
-    \right)\d x_j\\
-    &=\int_{\mathbb{R}}f(x_j)p_j(x_j)\d x_j
-    =\int_{\mathbb{R}}f(x_j) \mathbb{P}_{X_j}(\d x_j),
-  \end{align*}
-  这就表明对于任意 Borel 子集 $A$ 有
-  \[
-    \mathbb{P}_{X_j}(A)=\int_A p_j(x_j)\d x_j,  
-  \]
-  即 $X_j$ 有密度函数 $p_j$。 
-\end{proof}
-
-如果 $X=(X_1,\dots,X_d)$ 是值在 $\mathbb{R}^d$ 中的随机变量，那么
-概率测度 $\mathbb{P}_{X_j}$ 被称为 $X$ 的\emph{边缘分布}，分布律
-$\mathbb{P}_{X_j}$ 由 $\mathbb{P}_X$ 完全决定：$\mathbb{P}_{X_j}$
-就是 $\mathbb{P}_X$ 在投影 $\pi_j$ 下的推前。需要注意反之不是正确的，
-也就是说即使确定了所有的边缘分布 $\mathbb{P}_{X_1},\dots,\mathbb{P}_{X_j}$，
-也不能确定 $\mathbb{P}_X$。
- 
-
-\subsection{经典分布}
-
-本小节我们列举一些重要的概率分布。
-
-\paragraph{离散分布}
-\begin{enumerate}
-  \item \emph{均匀分布}。如果 $E$ 是有限集，值在 $E$ 中的随机变量
-  $X$ 如果满足
-  \[
-    \mathbb{P}(X=x)=\frac{1}{\card(E)},\quad \forall x\in E,  
-  \]
-  那么我们说 $X$ 是 $E$ 上的均匀分布。
-  \item \emph{参数 $\mathbold{p\in[0,1]}$ 的 Bernoulli 分布}。如果值在
-  $\{0,1\}$ 中的随机变量 $X$ 满足
-  \[
-    \mathbb{P}(X=1)=p,\quad \mathbb{P}(X=0)=1-p,  
-  \]
-  那么我们说 $X$ 是 $E$ 上参数 $p$ 的 Bernoulli 分布。
-  \item \emph{二项分布 $\mathbold{\mathcal{B}(n,p)\ (n\in \mathbb{N},p\in[0,1])}$}。
-  如果值在 $\{0,1,\dots,n\}$ 中的随机变量 $X$ 满足
-  \[
-    \mathbb{P}(X=k)=\binom{n}{k}p^k(1-p)^{n-k} ,\quad \forall k\in\{0,1,\dots,n\} ,
-  \]
-  那么我们说 $X$ 是 $E$ 上的二项分布。
-  \item \emph{参数 $\mathbold{p\in(0,1)}$ 的几何分布}。如果
-  值在 $\mathbb{Z}_+$ 中的随机变量 $X$ 使得
-  \[
-    \mathbb{P}(X=k)=(1-p)p^k  ,\quad k\in \mathbb{Z}_+,
-  \]
-  那么我们说 $X$ 是 $E$ 上参数 $p$ 的几何分布。
-  \item \emph{参数 $\mathbold{\lambda>0}$ 的 Poisson 分布}。
-  如果值在 $\mathbb{Z}_+$ 中的随机变量 $X$ 使得
-  \[
-    \mathbb{P}(X=k)=\frac{\lambda^k}{k!}e^{-\lambda},\quad\forall k\in \mathbb{Z}_+,  
-  \]
-  那么我们说 $X$ 是 $E$ 上参数 $\lambda$ 的 Poisson 分布。容易计算
-  \[
-    \mathbb{E}[X]=\sum_{k=0}^\infty k \mathbb{P}(X=k)=
-    \sum_{k=1}  ^\infty \frac{\lambda^k}{(k-1)!}e^{-\lambda}=\lambda,
-  \]
-  Poisson 分布在实际应用中非常重要，通常被用于建模某个“罕见事件”
-  在长时间段内发生的次数。准确的数学叙述是 Poisson 分布是
-  二项分布的近似。对于每个 $n\geq 1$，记 $X_n$ 为服从二项分布
-  $\mathcal{B}(n,p_n)$ 的随机变量，如果在 $n\to\infty$ 的时候
-  有 $np_n\to\lambda$，那么对于每个 $k\in \mathbb{N}$，有
-  \[
-    \lim_{n\to\infty} \mathbb{P}(X_n=k)=
-    \frac{\lambda^k}{k!}e^{-\lambda}.
-  \]
-  这可以解释为，如果每天有很小的概率 $p_n\approx\lambda/n$
-  发生地震，那么地震在 $n$ 天内发生的次数将近似服从泊松分布。
-\end{enumerate}
-
-\paragraph{连续分布}
-在下面的五个例子中，$X$ 都指的是一个有密度 $p$ 的实值随机变量。
-\begin{enumerate}
-  \item \emph{$\mathbold{[a,b]}$ 上的均匀分布}：
-  \[
-    p(x)=\frac{1}{b-a}\indicator{[a,b]}(x).  
-  \]
-  \item \emph{参数 $\mathbold{\lambda>0}$ 的指数分布}：
-  \[
-    p(x)=\lambda e^{-\lambda x}\indicator{\mathbb{R}_+}(x),  
-  \]
-  此时对于 $a\geq 0$，有
-  \[
-    \mathbb{P}(X\geq a)=\int_a^\infty p(x)\d x=
-    e^{-\lambda a}.  
-  \]
-  这表明指数分布有下面的重要性质：对于 $a,b\geq 0$，有
-  \begin{equation}
-    \mathbb{P}(X\geq a+b)=\mathbb{P}(X\geq a)\mathbb{P}(X\geq b).
-  \end{equation}
-  \item \emph{Gamma 分布 $\mathbold{\Gamma(a,\lambda)\ (a>0,\lambda>0)}$}：
-  \[
-    p(x)=\frac{\lambda^a}{\Gamma(a)}x^{a-1}e^{-\lambda x}\indicator{\mathbb{R}_+}(x),  
-  \]
-  这是指数分布的推广，$a=1$ 时即指数分布。
-  \item \emph{参数 $\mathbold{a>0}$ 的 Cauchy 分布}：
-  \[
-    p(x)=\frac{1}{\pi}\frac{a}{a^2+x^2} , 
-  \]
-  注意到服从 Cauchy 分布的随机变量的数学期望是不存在的，因为
-  \[
-    \mathbb{E}[|X|]=\int_{-\infty}^{\infty}\frac{1}{\pi}\frac{a|x|}{a^2+x^2}\d x=\infty.  
-  \]
-  \item \emph{正态分布 $\mathbold{\mathcal{N}(m,\sigma^2)\ (m\in \mathbb{R},\sigma>0)}$}：
-  \[
-    p(x)=\frac{1}{\sigma\sqrt{2\pi}}\exp\left(-\frac{(x-m)^2}{2\sigma^2}\right)  .
-  \]
-  正态分布与 Poisson 分布一起成为概率论中最重要的两个分布。正态分布
-  的密度曲线呈著名的钟形曲线。按定义很容易验证
-  \[
-    m=\mathbb{E}[X],\quad \sigma^2 =\mathbb{E}[(X-m)^2]. 
-  \]
-
-  对于 $a,b\in \mathbb{R}$，考虑随机变量 $Y=aX+b$，那么
-  对于任意的 Borel 函数 $f:\mathbb{R}\to \mathbb{R}_+$，有
-  \begin{align*}
-    \mathbb{E}[f(Y)]&=\mathbb{E}[f(aX+b)]=\int_{\mathbb{R}}f(ax+b)\mathbb{P}_X(\d x)\\
-    &=\int_{\mathbb{R}}f(ax+b)p(x)\d x
-    =\frac{1}{a}\int_{\mathbb{R}}f(y)p\left(\frac{y-b}{a}\right)\d y\\
-    &=\int_{\mathbb{R}}f(y)\frac{1}{a}p\left(\frac{y-b}{a}\right)\d y, 
-  \end{align*}
-  这表明
-  \[
-    p(y)=\frac{1}{a\sigma\sqrt{2\pi}}\exp\left(-\frac{(y-(am+b))^2}{2(a\sigma)^2}\right),
-  \]
-  即 $aX+b$ 服从分布 $\mathcal{N}(am+b,a^2\sigma^2)$。
-\end{enumerate}
-
-\subsection{实值随机变量的分布函数}
-
-令 $X$ 是实值随机变量，定义 $X$ 的\emph{分布函数}为 $F_X:\mathbb{R}\to [0,1]$，
-其满足
-\[
-  F_X(t)=\mathbb{P}(X\leq t)=\mathbb{P}_X((-\infty,t]),\quad \forall t\in \mathbb{R}.  
-\]
-根据 \autoref{coro:uniqueness of measure}，$F_X$ 实际上完全刻画了分布 $\mathbb{P}_X$。
-确切的说，如果知道了 $F_X$，即相当于知道了所有 $\mathbb{P}_X((-\infty,t])$ 的值，
-而所有区间 $(-\infty,t]$ 构成的子集族对有限交封闭，又因为 $\mathbb{P}_X$
-为有限测度，所以 $\mathbb{P}_X$ 在所有区间 $(-\infty,t]$ 上的值可以完全
-确定 $\mathbb{P}_X$ 在 $\mathcal{B}(\mathbb{R})$ 上的值。
-
-显然函数 $F_X$ 是递增的、右连续的并且在 $-\infty$ 处极限为 $0$、
-在 $+\infty$ 处极限为 $1$。反之，如果 $F:\mathbb{R}\to [0,1]$ 满足
-上面的性质，定理 ？表明存在(唯一的) $\mathbb{R}$ 上的概率测度
-$\mu$ 使得 $\mu((-\infty,t])=F(t)$。即这样的函数 $F$ 总能
-解释为某个实值随机变量的分布函数。
-
-令 $F_X(a-)$ 表示 $F_X$ 在 $a\in \mathbb{R}$ 处的左极限。那么
-容易验证
-\begin{align*}
-  \mathbb{P}(a\leq X\leq b)&=F_X(b)-F_X(a-),\\
-  \mathbb{P}(a<X<b)&=F_X(b-)-F_X(a).
-\end{align*}
-特别的，$\mathbb{P}(X=a)=F_X(a)-F_X(a-)$。这表明 $F_X$ 的间断点的个数
-恰为 $\mathbb{P}_X$ 的原子个数。
-
-\subsection{由随机变量生成的 $\sigma$-域}
-
-\begin{proposition}\label{prop:sigmaX-measurable}
-  令 $X$ 是值在 $(E,\mathcal{E})$ 中的随机变量，$Y$ 是实值随机变量，
-  那么下面的说法等价：
-  \begin{enumerate}
-    \item $Y$ 是 $\sigma(X)$-可测的；
-    \item 存在 $(E,\mathcal{E})$ 到 $(\mathbb{R},\mathcal{B}(\mathbb{R}))$
-    的可测函数 $f$ 使得 $Y=f(X)$。
-  \end{enumerate}
-\end{proposition}
-
-
-\section{随机变量的矩}
-
-\subsection{矩和方差}
-
-令 $X$ 是实值随机变量，$p\in \mathbb{N}$。定义 $X$ 的\emph{$p$-阶矩}
-为 $\mathbb{E}[X^p]$，其仅在 $X\geq 0$ 或者 $\mathbb{E}[|X|^p]<\infty$
-的时候有定义。
-
-因为期望是相对于测度 $\mathbb{P}_X$ 的一种积分，所以我们有下面的结果。
-如果 $X$ 是值在 $[0,\infty]$ 中的随机变量，那么我们有
-\begin{itemize}[nosep]
-  \item $\mathbb{E}[X]<\infty\Rightarrow X<\infty,\ \alsu{\mathbb{P}_X}$
-  \item $\mathbb{E}[X]=0\Rightarrow X=0\,\ \alsu{\mathbb{P}_X}$
-\end{itemize}
-此外，各种极限与积分交换次序的定理也可以直接改写为期望的形式：
-\begin{itemize}[nosep]
-  \item \emph{单调收敛定理}。如果 $(X_n)_{n\in \mathbb{N}}$ 是一列
-  值在 $[0,\infty]$ 中递增的随机变量，那么
-  \[
-    \ulim[n\to\infty]  \mathbb{E}[X_n]=\mathbb{E}\left[\ulim[n\to\infty]X_n\right].
-  \]
-  \item \emph{Fatou 引理}。如果 $(X_n)_{n\in \mathbb{N}}$ 是一列
-  值在 $[0,\infty]$ 中的随机变量，那么
-  \[
-    \mathbb{E}[\liminf X_n]\leq \liminf \mathbb{E}[X_n].  
-  \]
-  \item \emph{控制收敛定理}。如果 $(X_n)_{n\in \mathbb{N}}$ 是一列
-  实值随机变量，并且存在值在 $[0,\infty]$ 中的随机变量 $Z$ 使得
-  \[
-    |X_n|\leq Z,\quad \mathbb{E}[Z]<\infty, \quad X_n\to X,\ 
-    \alsu{\mathbb{P}_X}  
-  \]
-  那么
-  \[
-    \lim_{n\to\infty}\mathbb{E}[X_n]=\mathbb{E}\left[\lim_{n\to\infty}X_n\right]=\mathbb{E}[X],
-    \quad \lim_{n\to\infty}\mathbb{E}[|X_n-X|]=0.
-  \]
-\end{itemize}
-
-对于每个 $p\in[1,\infty]$，考虑空间 $L^p(\Omega,\mathcal{A},\mathbb{P})$。
-H\"older 不等式表明对于任意实值随机变量 $X,Y$，如果 $p,q\in (1,\infty)$
-使得 $1/p+1/q=1$，那么
-\[
-  \mathbb{E}[|XY|]\leq \mathbb{E}[|X|^p]^{1/p}\mathbb{E}[|Y|^q]^{1/q}. 
-\]
-取 $Y=1$，我们得到 $\norm{X}_1\leq\norm{X}_p$。此外，
-如果 $1\leq p<q\leq \infty$，有 $\norm{X}_p\leq \norm{X}_q$，
-这也表明 $L^q(\Omega, \mathcal{A},\mathbb{P})\subseteq L^p(\Omega,\mathcal{A},\mathbb{P})$。
-
-Hilbert 空间 $L^2(\Omega,\mathcal{A},\mathbb{P})$ 上的内积定义为
-$\langle X,Y\rangle_{L^2}=\mathbb{E}[XY]$，Cauchy-Schwarz 不等式表明
-\[
-  \mathbb{E}[|XY|]\leq \mathbb{E}[X^2]  ^{1/2}\mathbb{E}[Y^2]^{1/2}.
-\]
-特别地，我们有
-\[
-  \mathbb{E}[|X|]^2\leq \mathbb{E}[X^2].  
-\]
-
-如果 $X\in L^1(\Omega,\mathcal{A},\mathbb{P})$，$f:\mathbb{R}\to \mathbb{R}_+$
-是凸函数，那么 Jensen 不等式表明 
-\[
-  \mathbb{E}[f(X)]\geq f(\mathbb{E}[X]).
-\]
-
-\begin{definition}
-  令 $X\in L^2(\Omega,\mathcal{A},\mathbb{P})$，定义 $X$
-  的\emph{方差}为
-  \[
-    \var(X)=\mathbb{E}\bigl[(X-\mathbb{E}[X])^2\bigr]\geq 0,
-  \]
-  $X$ 的\emph{标准差}为
-  \[
-    \sigma_X=\sqrt{\var(X)}.  
-  \]
-\end{definition}
-
-\begin{proposition}
-  令 $X\in L^2(\Omega, \mathcal{A},\mathbb{P})$，方差
-  $\var(X)=\mathbb{E}[X^2]-\bigl(\mathbb{E}[X]\bigr)^2$。
-  对于任意的 $a\in \mathbb{R}$，有
-  \[
-    \mathbb{E}[(X-a)^2]=\var(X)+\bigl(\mathbb{E}[X]-a\bigr)  ^2.
-  \]
-\end{proposition}
-
+\include{chapters/ch8/probability}
 
 
 \chapter{独立性}
